[project]
name = "data-analyse-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "mime>=0.1.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "pgeocode>=0.5.0",
    "plotly>=6.1.2",
    "pyinstaller>=6.14.2",
    "streamlit>=1.47.1",
    "tenacity>=9.1.2",
]
